--- a/requirements.txt
+++ b/requirements.txt
@@ -1,203 +1,11 @@
-absl-py==1.2.0
-ahpy==2.0
-aiodns==3.0.0
-aiohttp-socks==0.7.1
-altair==4.2.2
-anaconda-navigator==2.1.4
-ansi2html==1.8.0
-appdirs==1.4.4
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-better-profanity==0.7.0
-bkcharts==0.2
-black==19.10b0
-blinker==1.5
-blis==0.7.9
-bpemb==0.3.4
-brotlipy==0.7.0
-catalogue==2.0.8
-cchardet==2.1.7
-certifi==2021.10.8
-chardet==3.0.4
-cleantext==1.1.4
-clyent==1.2.2
-colorama==0.4.6
-comtypes==1.1.10
-conda==22.9.0
-conda-build==3.21.8
-conda-verify==3.4.2
-confection==0.0.4
-conllu==4.5.2
-constantly==15.1.0
-cssselect==1.2.0
-cymem==2.0.7
-cytoolz==0.11.0
-daal4py==2021.5.0
-dash==2.8.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-datashape==0.5.4
-Deprecated==1.2.13
-elastic-transport==8.4.0
-elasticsearch==8.6.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.0
-fake-useragent==1.1.1
-flair==0.11.3
-flatbuffers==22.9.24
-fonttools==4.25.0
-ftfy==6.1.1
-gast==0.4.0
-gdown==4.4.0
-geographiclib==2.0
-geopy==2.3.0
-GetOldTweets3==0.0.11
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-api-python-client==2.83.0
-google-auth==2.17.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-google-trans-new==1.1.9
-googleapis-common-protos==1.59.0
-googletrans==3.0.0
-googletransx==2.4.2
-gspread==5.7.2
-h11==0.9.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2023.1.1
-httpcore==0.9.1
-httplib2==0.22.0
-httpx==0.13.3
-huggingface-hub==0.12.1
-hyperframe==5.2.0
-hyperopt==0.2.7
-idna==2.10
-importlib-metadata==3.10.1
-importlib-resources==5.10.2
-inflection==0.5.1
-instaloader==4.9.5
-Janome==0.4.2
-jupyter-dash==0.4.2
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-konoha==4.6.5
-langcodes==3.3.0
-langdetect==1.0.7
-libclang==14.0.6
-llvmlite==0.38.0
-markdown-it-py==2.2.0
-mccabe==0.6.1
-mdurl==0.1.2
-mkl-fft==1.3.1
-mkl-service==2.4.0
-more-itertools==9.1.0
-mpld3==0.3
-mpmath==1.2.1
-munkres==1.1.4
-murmurhash==1.0.9
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-numpy-financial==1.0.0
-oauthlib==3.2.1
-openai==0.27.0
-opt-einsum==3.3.0
-outcome==1.2.0
-overrides==3.1.0
-pathspec==0.7.0
-pathy==0.10.1
-patsy==0.5.2
-pep8==1.7.1
-Pillow==9.0.1
-pmdarima==2.0.3
-pptree==3.1
-preprocessor==1.1.3
-preshed==3.0.8
-protobuf==3.20.3
-py4j==0.10.9.7
-pyarrow==11.0.0
-pyasn1-modules==0.2.8
-pycares==4.3.0
-pycosat==0.6.3
-pycountry==22.3.5
-pycurl==7.44.1
-pydantic==1.10.4
-pydeck==0.8.0
-PyDispatcher==2.0.5
-pygame==2.1.2
-Pygments==2.14.0
-pygsheets==2.0.6
-pyls-spyder==0.4.0
-Pympler==1.0.1
-pyquery==2.0.0
-pyreadline==2.1
-pytest==7.1.1
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-python-socks==2.1.1
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-pywin32==302
-PyYAML==6.0
-queuelib==1.5.0
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rfc3986==1.5.0
-rich==13.3.3
-schedule==1.1.0
-segtok==1.5.11
-selenium==4.7.2
-semver==2.13.0
-sentencepiece==0.1.95
-sip==4.19.13
-smart-open==6.3.0
-smmap==5.0.0
 snscrape==0.5.0.20230113
+pandas==1.5.1
+numpy-financial==1.0.0
+streamlit==1.21.0
 spacy==3.5.0
 spacy-langdetect==0.1.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
-sqlitedict==2.1.0
-srsly==2.4.5
-statsmodels==0.13.2
-streamlit==1.21.0
-tables==3.6.1
-tabulate==0.8.9
-TBB==0.2
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.0.1
-textblob==0.17.1
-thinc==8.1.7
-tokenizers==0.13.2
-torch==1.13.1
-transformers==4.26.1
-trio==0.22.0
-trio-websocket==0.9.2
-twint==2.1.20
-typer==0.7.0
-typing_extensions==4.4.0
-tzdata==2023.3
-tzlocal==4.3
-uritemplate==4.1.1
-vaderSentiment==3.3.2
-validators==0.20.0
-wasabi==1.1.1
-webencodings==0.5.1
-Wikipedia-API==0.5.8
-win-unicode-console==0.5
-wincertstore==0.2
+better-profanity==0.7.0
 wordcloud==1.8.2.2
-wsproto==1.2.0
-xlwings==0.24.9
-zict==2.0.0
+cleantext==1.1.4
