--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas==1.5.1
 numpy-financial==1.0.0
 streamlit==1.21.0
 spacy==3.5.0
+en_core_web_sm==2.2.0
 spacy-langdetect==0.1.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
