--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,9 @@ snscrape==0.5.0.20230113
 pandas==1.5.1
 numpy-financial==1.0.0
 streamlit==1.21.0
-spacy==3.5.0
-en_core_web_sm==2.2.0
-spacy-langdetect==0.1.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
+
 better-profanity==0.7.0
 wordcloud==1.8.2.2
 cleantext==1.1.4
+spacy>=3.0.0,<4.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
