--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ snscrape==0.5.0.20230113
 pandas==1.5.1
 numpy-financial==1.0.0
 streamlit==1.21.0
+click==7.2.0
 
 better-profanity==0.7.0
 wordcloud==1.8.2.2
