--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ snscrape==0.5.0.20230113
 pandas==1.5.1
 numpy-financial==1.0.0
 
+en_core_web_sm==3.1.0
 
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz#egg=en_core_web_sm
 
 better-profanity==0.7.0
 wordcloud==1.8.2.2
