--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-snscrape==0.5.0.20230113
-pandas==1.5.1
-numpy-financial==1.0.0
+snscrape
+pandas
+numpy-financial
 
 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz#egg=en_core_web_sm
 
-better-profanity==0.7.0
-wordcloud==1.8.2.2
-cleantext==1.1.4
+better-profanity
+wordcloud
+cleantext
+
+transformers
+huggingface_hub
+
+streamlit
