--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ snscrape
 pandas
 numpy-financial
 
-
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz#egg=en_core_web_sm
 
 better-profanity
 wordcloud
 cleantext
 
+tensorflow
 transformers
 huggingface_hub
 
